--- a/index.html
+++ b/index.html
@@ -84,11 +84,7 @@
 
         <main class="l-loopstudios__main">
             <section class="l-banner">
-                <img 
-                    class="l-banner__img"
-                    src="/src/assets/images/desktop/image-interactive.webp"
-                    alt="" 
-                    width="731" 
+                <img class="l-banner__img" src="/src/assets/images/desktop/image-interactive.webp" alt="" width="731"
                     height="500">
 
                 <div class="l-banner__content">
@@ -96,9 +92,173 @@
                         The leader in interactive VR
                     </h2>
                     <p class="l-banner__description">
-                        Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of the best companies around the globe. Our award-winning creations have transformed businesses through digital experiences that bind to their brand.
+                        Founded in 2011, Loopstudios has been producing world-class virtual reality projects for some of
+                        the best companies around the globe. Our award-winning creations have transformed businesses
+                        through digital experiences that bind to their brand.
                     </p>
                 </div>
+            </section>
+
+            <section class="l-creations">
+                <h2 class="l-creations__headline">
+                    our creations
+                </h2>
+
+                <ul class="l-creations__list">
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-deep-earth.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-deep-earth.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            deep <br> earth
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-night-arcade.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-night-arcade.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            night <br> arcade
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-soccer-team.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-soccer-team.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            soccer <br> team vr
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-grid.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-grid.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            the <br> grid
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-from-above.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-from-above.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            from up <br> above vr
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-pocket-borealis.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-pocket-borealis.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            pocket <br> borealis
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-curiosity.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-curiosity.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            the <br> curiosity
+                        </h3>
+                    </li>
+
+                    <li class="l-creations__item">
+                        <picture class="l-creations__picture">
+                            <source 
+                                media="(min-width: 768px)"
+                                srcset="/src/assets/images/desktop/image-fisheye.webp"
+                                width="256"
+                                height="450">
+                            <img 
+                                src="/src/assets/images/mobile/image-fisheye.webp" 
+                                alt=""
+                                width="654"
+                                height="240"
+                                loading="lazy">
+                        </picture>
+                        <h3 class="l-creations__title">
+                            make it <br> fisheye
+                        </h3>
+                    </li>
+                </ul>
+
+                <button class="b-btn l-creations__btn">see all</button>
             </section>
         </main>
     </div>
